# Priamus

./: .gitignore  CMakeLists.txt
src/: SQLiteConnector.cpp  SQLiteConnector.h  main.cpp
src/DataContainers/: Column.cpp  Column.h  Table.cpp  Table.h
src/DatabaseConnectors/: CassandraConnector.cpp
